# bl-instagram-fastapi

./: .gitignore  bl-instagram-fastapi.db  log.txt  pyproject.toml
app/: custom_log.py  main.py  schemas.py  test_main.py
app/auth/: authentication.py  oauth2.py
app/db/: database.py  db_article.py  db_user.py  hash.py  models.py
app/router/: article.py  dependencies.py  file.py  product.py  user.py
app/router/templates/: templates.py
app/templates/: product.html  templates.py
app/templates/static/: styles.css
insta/: main.py  schemas.py
insta/auth/: authentication.py  oauth2.py
insta/db/: database.py  db_comment.py  db_post.py  db_user.py  models.py
insta/routers/: comment.py  post.py  user.py
